#fixed-outer z-index was too big

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 
 #fixed-outer {
   position: fixed;
-  z-index:349759279582739875924837958739579324875;
+  z-index:349759;
   pointer-events: none;
 }
 
